<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- LOGIN LAYOUT -->
    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="#ff000000">

        <!-- logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/background"/>

        <!-- sign-in button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content">
            </com.google.android.gms.common.SignInButton>

        </LinearLayout>
        
    </RelativeLayout>

    <!-- TRACKS LAYOUT -->
    <ScrollView
        android:id="@+id/tracks_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="#ff000000">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            <ImageButton
                android:layout_width="@dimen/small_track_width"
                android:layout_height="@dimen/small_track_height"
                android:id="@+id/track1"
                android:layout_gravity="center_horizontal"
                android:background="#ff888888"
                android:src="@drawable/track1"
                android:onClick="onStartMatchClicked"/>

            <ImageButton
                android:layout_width="@dimen/small_track_width"
                android:layout_height="@dimen/small_track_height"
                android:id="@+id/track2"
                android:layout_gravity="center_horizontal"
                android:background="#ff888888"
                android:src="@drawable/track2"
                android:onClick="onStartMatchClicked"/>

            <ImageButton
                android:layout_width="@dimen/small_track_width"
                android:layout_height="@dimen/small_track_height"
                android:id="@+id/track3"
                android:layout_gravity="center_horizontal"
                android:background="#ff888888"
                android:src="@drawable/track3"
                android:onClick="onStartMatchClicked"/>

            <ImageButton
                android:layout_width="@dimen/small_track_width"
                android:layout_height="@dimen/small_track_height"
                android:id="@+id/track4"
                android:layout_gravity="center_horizontal"
                android:background="#ff888888"
                android:src="@drawable/track4"
                android:onClick="onStartMatchClicked"/>

            <ImageButton
                android:layout_width="@dimen/small_track_width"
                android:layout_height="@dimen/small_track_height"
                android:id="@+id/track5"
                android:layout_gravity="center_horizontal"
                android:background="#ff888888"
                android:src="@drawable/track5"
                android:onClick="onStartMatchClicked"/>

            <ImageButton
                android:layout_width="@dimen/small_track_width"
                android:layout_height="@dimen/small_track_height"
                android:id="@+id/track6"
                android:layout_gravity="center_horizontal"
                android:background="#ff888888"
                android:src="@drawable/track6"
                android:onClick="onStartMatchClicked"/>
        </LinearLayout>
    </ScrollView>

    <!-- MATCHUP LAYOUT - aquest ha d'evolucionar -->
    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".SkeletonActivity"
        android:background="#ff000000">

        <!-- logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/background"/>

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".SkeletonActivity"
            tools:ignore="UselessParent" >
            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text=""
                android:textAppearance="@style/HelpText.Caption" />
            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />
            <Button
                android:id="@+id/startMatchButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onStartMatchClicked"
                android:text="@string/start_match" />
            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />
            <Button
                android:id="@+id/quickMatchButon"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onQuickMatchClicked"
                android:text="@string/quick_match" />
        </LinearLayout>
    </RelativeLayout>

    <!-- GAMEPLAY LAYOUT -->
    <LinearLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        tools:context=".SkeletonActivity" >
        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/match_instructions"
            android:textAppearance="@style/HelpText"
            android:width="300dp" />
        <TextView
            android:id="@+id/turn_counter_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/turn_counter"
            android:textAppearance="@style/GuessWordText"
            android:width="300dp" />
        <EditText
            android:id="@+id/data_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:inputType="textEmailAddress|textEmailSubject"
            android:maxLines="1"
            android:text="@string/hello_world"
            android:textAppearance="@style/GuessWordText" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/doneButton"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:layout_height="wrap_content"
                android:onClick="onDoneClicked"
                android:text="@string/done"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:layout_height="wrap_content"
                android:onClick="onCancelClicked"
                android:text="@string/cancel"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >
            <Button
                android:id="@+id/leaveButton"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:layout_height="wrap_content"
                android:onClick="onLeaveClicked"
                android:text="@string/leave"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/finishButton"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:layout_height="wrap_content"
                android:onClick="onFinishClicked"
                android:text="@string/finish"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <aferrer.vectorRace.DrawingView
                android:id="@+id/drawing"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:background="#FFFFFFFF" />

            <!-- 9 buttons to drive the car -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/paint_colors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#00660000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF660000" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#00FF0000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFF0000" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#00FF6600"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFF6600" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#00FFCC00"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFFCC00" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#00009900"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF009900" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#00009999"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF009999" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#000000FF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF0000FF" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#00990099"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF990099" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#00FF6666"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFF6666" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

     <!-- PROGRESS LAYOUT -->
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >
        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>